[build-system]
requires = []

[tool.hatch.envs.doc]
detached = true


[project]
name = "adv-docs"
dynamic = ["version"]
description = "Advantics Documentation Management"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Axel Voitier", email = "axel.voitier@advantics.fr" },
  { name = "Salva Ferradas", email = "salva.ferradas@advantics.fr" },
]

dependencies = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocs-section-index",
  "pillow",
  "cairosvg",
  "mike",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-with-pdf",
  "mkdocs-mermaid2-plugin",
  "pymdown-extensions",
  "beautifulsoup4",
  "libsass",
  "lxml",
]

[tool.hatch.envs.doc.scripts]
build = "mkdocs build --clean --strict"
serve = "ENABLE_PROD=False mkdocs serve --dev-addr localhost:8000"
